--- a/HomeWorAutoShop/index.html
+++ b/HomeWorAutoShop/index.html
@@ -692,7 +692,7 @@
        
     <footer class="footer">
        <div class="container">
-           <div class="row">
+           <div class="row box_center">
                <p class="p_footer">MatiashIllia_IlliaMatiash CORPORATION</p>
            </div>
        </div>
