--- a/HomeWorAutoShop/index.html
+++ b/HomeWorAutoShop/index.html
@@ -629,7 +629,7 @@
           <!-- Timer -->       
                <div class="row timer section_header">
 
-                    <div id="" class="countdown_attribute">
+                    <div  class="countdown_attribute">
 
                      <div class="countdown-number">
                         <span class="hours">1</span>
