change tag in button from <a> to <span>

--- a/Avengers/index.html
+++ b/Avengers/index.html
@@ -39,7 +39,7 @@
                         </div>
 
                         <div class="col header Avengers">
-                            <p><span>A</span>vengers</p>
+                            <p><span class="color_red">A</span>vengers</p>
                         </div>
                         <div class="col header">
                         </div>
@@ -56,7 +56,7 @@
                             <p class="taxt_man">MAN</p>
                             <div class="container container_with_btn">
                                 <button class="btn">
-                                <p class="p_btn">Click on Kill Thanos</p>
+                                <span class="p_btn">Click on Kill Thanos</span>
                                 </button>
                                 <div class="container">
                                     <p class="text_under_btn">Join the Marvel's The Avengers now  -></p>
