change second temer

--- a/HomeWorkTimer/index.html
+++ b/HomeWorkTimer/index.html
@@ -20,19 +20,16 @@
              <h2 id="timerLabel1"></h2>  
            </div>
             <div class="second">
-
                <svg class="progress-ring">
 
                   <circle class="progress-ring__circle" cx="120" cy="120" r="106" >
                    </circle>
                </svg>
                </div>
-            <input class="btn first_timer" type="button"  value="START" id="start1">
+            <input class="btn first_timer" type="button"  value="STOP" id="start1">
 <!--            onclick="start_stop(this)"-->
         </div>
-          
-          
-           <div class="col">
+          <div class="col">
            <div class="tablo">
                <h2 id="timerLabel2"></h2>
            </div>
@@ -54,10 +51,6 @@
     </div>
 
 </div>
-
-   
-   
-   
-    <script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
