--- a/HomeWorkAjax/index.html
+++ b/HomeWorkAjax/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     
-    <link rel="stylesheet" href="swiper.min.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style/swiper.min.css">
+    <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
    
@@ -28,17 +28,10 @@
    </form>
    </div>
 </div>
- 
- 
-  
-  
-  
 <!--    <div class="users"></div>-->
 
-   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="swiper.min.js"></script>
-    
-
+<!--   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>-->
+    <script src="js/swiper.min.js"></script>
 <!--
 <script>
     var swiper = new Swiper('.swiper-container', {
@@ -59,6 +52,6 @@
     });
   </script>
 -->
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
