--- a/HomeWorkAjax/index.html
+++ b/HomeWorkAjax/index.html
@@ -2,56 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Users Card</title>
     
-    <link rel="stylesheet" href="style/swiper.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-   
-
-<div class="swiper-container">
-    <div class="swiper-wrapper">
-    
+    <div class="carousel">
     </div>
     <div class="form">
-     <form>
-       <label for="">
-          name
-           <input type="text" id = "name">
-       </label>
-       <label for="">
-          age
-           <input type="text" id = "age">
-       </label>
-       <button type = "button" id = "create">create</button>
-   </form>
-   </div>
-</div>
-<!--    <div class="users"></div>-->
+        <form>
+           <label for="">
+               name
+               <input type="text" id = "name">
+           </label>
+           <label for="">
+               age
+               <input type="text" id = "age">
+           </label>
+           <button class="btn" type = "button" id = "create">CREATE</button>
+        </form>
+    </div>
 
-<!--   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>-->
-    <script src="js/swiper.min.js"></script>
-<!--
-<script>
-    var swiper = new Swiper('.swiper-container', {
-      effect: 'coverflow',
-      grabCursor: true,
-      centeredSlides: true,
-      slidesPerView: 'auto',
-      coverflowEffect: {
-        rotate: 30,
-        stretch: 0,
-        depth: 800,
-        modifier: 1,
-        slideShadows : true,
-      },
-      pagination: {
-        el: '.swiper-pagination',
-      },
-    });
-  </script>
--->
-  <script src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
