--- a/tajam/index.html
+++ b/tajam/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/default.css">
     <link rel="stylesheet" href="css/media-queries.css">
    </head>
 
