changed width img

--- a/testShop/index.html
+++ b/testShop/index.html
@@ -272,9 +272,9 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			<!-- </div> -->
 
-			<div class="choice-coloms">
+			<!-- <div class="choice-coloms"> -->
 				<div class="smallBlock">
 					<div class="photo">
 						<img src="img/choiceSale/stradivarius.png" alt="">
@@ -348,9 +348,9 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			<!-- </div> -->
 
-			<div class="choice-coloms">
+			<!-- <div class="choice-coloms"> -->
 				<div class="smallBlock">
 					<div class="photo">
 						<img src="img/choiceSale/Bershka.png" alt="">
@@ -424,9 +424,9 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			<!-- </div> -->
 
-			<div class="choice-coloms">
+			<!-- <div class="choice-coloms"> -->
 				<div class="smallBlock">
 					<div class="photo">
 						<img src="img/choiceSale/stradivarius.png" alt="">
@@ -500,7 +500,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			<!-- </div> -->
 		</div>	
 	</section> <!-- End Choise sele -->
 
