change html and css files after Validator

--- a/landingPageBlackFriday/index.html
+++ b/landingPageBlackFriday/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style/flipdown.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/media-queries.css">
+    <link rel="stylesheet" href="style/flipdown.css">
+
     <title>Black Friday</title>
 </head>
 <body>
@@ -69,7 +70,6 @@
                     <a href="#" class="go-toGategory col-sm-12 col-md-6 offset-md-3">
                         <span>Try to find some interesting offers here  </span> <i class="fas fa-arrow-right"></i>
                     </a>
-                </a>
             </div>
         </div>
     </section>
@@ -95,11 +95,11 @@
                         </div>  
                 </div>
                 <div class="nav">
-                    <a href="#flash" class="scroll nav-link"><img src="img/friday_unlock.png" alt="Navigation button Unlock"><span>Flash & Unlock</span></a>
-                    <a href="#table" class="scroll nav-link"><img src="img/friday_lamp.png" alt="Navigation button TableLamps"><span>Table Lamps</span></a>
-                    <a href="#" class="nav-link"><img src="img/friday_stem.png" alt="Navigation button STEM Toys& Hobbies"><span>STEM Toys& Hobbies</span></a>
-                    <a href="#" class="nav-link"><img src="img/friday_energy.png" alt="Navigation button Energy Saving"><span>Energy Saving</span></a>
-                    <a href="#" class="nav-link"><img src="img/friday_car.png" alt="Navigation button Car Electronics"><span>Car Electronics</span></a>
+                    <a href="#flash" class="scroll nav-link"><img src="img/friday_unlock.png" alt="Navigation button Unlock">Flash & Unlock</a>
+                    <a href="#table" class="scroll nav-link"><img src="img/friday_lamp.png" alt="Navigation button TableLamps">Table Lamps</a>
+                    <a href="#" class="nav-link"><img src="img/friday_stem.png" alt="Navigation button STEM Toys& Hobbies">STEM Toys& Hobbies</a>
+                    <a href="#" class="nav-link"><img src="img/friday_energy.png" alt="Navigation button Energy Saving">Energy Saving</a>
+                    <a href="#" class="nav-link"><img src="img/friday_car.png" alt="Navigation button Car Electronics">Car Electronics</a>
                 </div>
             </div>
         </section> <!-- End Main Section -->
@@ -228,7 +228,7 @@
                             </div>
                             <div class="row">
                                 <div class="product-photo col-sm-6 ">
-                                    <a href="#"><img class="photo-Dom" src="" alt="Octoplus Box Samsung"></a>
+                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung"></a>
                                 </div>
                                 <div class="product-description col-sm-6">
                                     <a href=""><h3>Octoplus Box Samsung + LG + JTAG Activated with Optimus Cable Set + JIG Set</h3></a>
@@ -254,7 +254,7 @@
                             </div>
                             <div class="row">
                                 <div class="product-photo col-sm-6">
-                                    <a href="#"><img class="photo-Dom" src="" alt="Octoplus Box Samsung"></a>
+                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung"></a>
                                 </div>
                                 <div class="product-description col-sm-6">
                                     <a href="#"><h3>Octoplus Box Samsung + LG + JTAG Activated with Optimus Cable Set + JIG Set</h3></a>
@@ -280,7 +280,7 @@
                             </div>
                             <div class="row">
                                 <div class="product-photo col-sm-6">
-                                    <a href="#"><img class="photo-Dom" src="" alt="Octoplus Box Samsung"></a>
+                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung"></a>
                                 </div>
                                 <div class="product-description col-sm-6">
                                     <a href="#"><h3>Octoplus Box Samsung + LG + JTAG Activated with Optimus Cable Set + JIG Set</h3></a>
