change after Validator

--- a/landingPageBlackFriday/index.html
+++ b/landingPageBlackFriday/index.html
@@ -95,11 +95,11 @@
                         </div>  
                 </div>
                 <div class="nav">
-                    <a href="#flash" class="scroll nav-link"><img src="img/friday_unlock.png" alt="Navigation button Unlock">Flash & Unlock</a>
-                    <a href="#table" class="scroll nav-link"><img src="img/friday_lamp.png" alt="Navigation button TableLamps">Table Lamps</a>
-                    <a href="#" class="nav-link"><img src="img/friday_stem.png" alt="Navigation button STEM Toys& Hobbies">STEM Toys& Hobbies</a>
-                    <a href="#" class="nav-link"><img src="img/friday_energy.png" alt="Navigation button Energy Saving">Energy Saving</a>
-                    <a href="#" class="nav-link"><img src="img/friday_car.png" alt="Navigation button Car Electronics">Car Electronics</a>
+                    <a href="#flash" class="scroll nav-link"><img src="img/friday_unlock.png" alt="">Flash & Unlock</a>
+                    <a href="#table" class="scroll nav-link"><img src="img/friday_lamp.png" alt="">Table Lamps</a>
+                    <a href="#" class="nav-link"><img src="img/friday_stem.png" alt="">STEM Toys& Hobbies</a>
+                    <a href="#" class="nav-link"><img src="img/friday_energy.png" alt="">Energy Saving</a>
+                    <a href="#" class="nav-link"><img src="img/friday_car.png" alt="">Car Electronics</a>
                 </div>
             </div>
         </section> <!-- End Main Section -->
@@ -135,8 +135,7 @@
                                         Buy now
                                     </a>
                                     <div class="see-more">
-                                        <a href="#">See more <i class="fas fa-chevron-right"></i></a>
-                                        
+                                        <a href="#">See more <i class="arrow fas fa-chevron-right"></i></a>     
                                     </div>
                                 </div>
                             </div>
@@ -165,7 +164,7 @@
                                         Buy now
                                     </a>
                                     <div class="see-more">
-                                        <a href="#">See more <i class="fas fa-chevron-right"></i></a>
+                                        <a href="#">See more <i class="arrow fas fa-chevron-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -191,7 +190,7 @@
                                         Buy now
                                     </a>
                                     <div class="see-more">
-                                        <a href="#">See more <i class="fas fa-chevron-right"></i></a>
+                                        <a href="#">See more <i class="arrow fas fa-chevron-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -228,7 +227,7 @@
                             </div>
                             <div class="row">
                                 <div class="product-photo col-sm-6 ">
-                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung"></a>
+                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung" src="img/product/1.png"></a>
                                 </div>
                                 <div class="product-description col-sm-6">
                                     <a href=""><h3>Octoplus Box Samsung + LG + JTAG Activated with Optimus Cable Set + JIG Set</h3></a>
@@ -238,7 +237,7 @@
                                         Buy now
                                     </a>
                                     <div class="see-more">
-                                        <a href="#">See more <i class="fas fa-chevron-right"></i></a>
+                                        <a href="#">See more <i class="arrow fas fa-chevron-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -254,7 +253,8 @@
                             </div>
                             <div class="row">
                                 <div class="product-photo col-sm-6">
-                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung"></a>
+                                    <a href="#" class="keyForDom"></a>
+                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung" src="img/product/2.png"></a>
                                 </div>
                                 <div class="product-description col-sm-6">
                                     <a href="#"><h3>Octoplus Box Samsung + LG + JTAG Activated with Optimus Cable Set + JIG Set</h3></a>
@@ -264,7 +264,7 @@
                                         Buy now
                                     </a>
                                     <div class="see-more">
-                                        <a href="#">See more <i class="fas fa-chevron-right"></i></a>
+                                        <a href="#">See more <i class="arrow fas fa-chevron-right"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -280,7 +280,7 @@
                             </div>
                             <div class="row">
                                 <div class="product-photo col-sm-6">
-                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung"></a>
+                                    <a href="#"><img class="photo-Dom" alt="Octoplus Box Samsung" src="img/product/3.png"></a>
                                 </div>
                                 <div class="product-description col-sm-6">
                                     <a href="#"><h3>Octoplus Box Samsung + LG + JTAG Activated with Optimus Cable Set + JIG Set</h3></a>
@@ -290,7 +290,7 @@
                                         Buy now
                                     </a>
                                     <div class="see-more">
-                                        <a href="#">See more <i class="fas fa-chevron-right"></i></a>
+                                        <a href="#">See more <i class="arrow fas fa-chevron-right"></i></a>
                                     </div>
                                 </div>
                             </div>
