add tag span to nav-link

--- a/landingPageBlackFriday/index.html
+++ b/landingPageBlackFriday/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <link rel="stylesheet" href="style/flipdown.css">
     <link rel="stylesheet" href="style/main.css">
     <link rel="stylesheet" href="style/media-queries.css">
-    <link rel="stylesheet" href="style/flipdown.css">
 
     <title>Black Friday</title>
 </head>
@@ -95,11 +95,11 @@
                         </div>  
                 </div>
                 <div class="nav">
-                    <a href="#flash" class="scroll nav-link"><img src="img/friday_unlock.png" alt="">Flash & Unlock</a>
-                    <a href="#table" class="scroll nav-link"><img src="img/friday_lamp.png" alt="">Table Lamps</a>
-                    <a href="#" class="nav-link"><img src="img/friday_stem.png" alt="">STEM Toys& Hobbies</a>
-                    <a href="#" class="nav-link"><img src="img/friday_energy.png" alt="">Energy Saving</a>
-                    <a href="#" class="nav-link"><img src="img/friday_car.png" alt="">Car Electronics</a>
+                    <a href="#flash" class="scroll nav-link"><img src="img/friday_unlock.png" alt=""> <span>Flash & Unlock</span> </a>
+                    <a href="#table" class="scroll nav-link"><img src="img/friday_lamp.png" alt=""> <span>Table Lamps</span> </a>
+                    <a href="#" class="nav-link"><img src="img/friday_stem.png" alt=""> <span>STEM Toys& Hobbies</span> </a>
+                    <a href="#" class="nav-link"><img src="img/friday_energy.png" alt=""> <span>Energy Saving</span> </a>
+                    <a href="#" class="nav-link"><img src="img/friday_car.png" alt=""> <span>Car Electronics</span> </a>
                 </div>
             </div>
         </section> <!-- End Main Section -->
